# CppCStemplate

./: CMakeLists.txt  ClientMain.cpp  main.cpp
inc/: Client.hpp  ConsoleLog.hpp  RecvAndSend.hpp  Server.hpp  ThreadPool.h
src/: Client.cpp  RecvAndSend.cpp  Server.cpp
